Added functions to create proper tasks

--- a/index.html
+++ b/index.html
@@ -18,17 +18,33 @@
     </header>
     <main>
         <section class="question">
-            <h1>Press Start to Start Your Coding Quiz</h1>
+            <h1> Press Start to Start Your Coding Quiz</h1>
             <div class="disclaimer">Things to Know Before You Get Started</div>
-            <div>This quiz is timed. You will have 90 seconds.</div>
-            <div>If you get an answer correct you will gain points.</div>
-            <div>However, if you get an answer incorrect, you will lose points and time.</div>
-            <div>The quiz ends when the timer hits 0 or when all questions are answered.</div>
+            <div><!-- id="answer-opt"-->If you get an answer correct you will gain points.</div>
+            <div><!-- id="answer-opt"-->This quiz is timed. You will have 90 seconds.</div>
+            <div><!-- id="answer-opt"-->However, if you get an answer incorrect, you will lose points and time.</div>
+            <div><!-- id="answer-opt"-->The quiz ends when the timer hits 0 or when all questions are answered.</div>
             <div>
-                <button class="choice" type="submit">Start</button>
+                <button class="submit-btn" id="start" type="submit">Start</button>
+                <button class="exit-btn" id="quit" type="submit">Exit Quiz</button>
             </div>
         </section>
     </main>
     <script src="./assets/script.js"></script>
 </body>
 </html>
+
+<!--
+    <div class="askStyle">Things to Know Before You Get Started</div>
+            <div>If you get an answer correct you will gain points.</div>
+            <div>This quiz is timed. You will have 90 seconds.</div>
+            <div>However, if you get an answer incorrect, you will lose points and time.</div>
+            <div>The quiz ends when the timer hits 0 or when all questions are answered.</div>
+-->
+<!--
+    <div class="askStyle">Things to Know Before You Get Started</div>
+            <div>If you get an answer correct you will gain points.</div>
+            <div>This quiz is timed. You will have 90 seconds.</div>
+            <div>However, if you get an answer incorrect, you will lose points and time.</div>
+            <div>The quiz ends when the timer hits 0 or when all questions are answered.</div>
+-->
